This is a large commit.
For one thing, this commit adds the parser class. One parser is meant to parse one file, keeping track of things like the current line number and character number for error outputs. This one-file-per-parser is not only simple and scalable, but also allows for the possibility of concurrent file parsing. This also replaced the messaging and debugging utilities header file.

I also added 

I also added the values class and some derived classes of it. This class is meant to represent one Assembly-level value, e.g. an Assembly label, a register, or a memory address.

I also added a new example.

Finally, I added a LaTeX outline for a possible style guide document to start.

--- a/notes and reports/usage documentation.tex
+++ b/notes and reports/usage documentation.tex
@@ -599,6 +599,8 @@ Variable\verb+--+ \commentline{This operation is NOT part of the if statement! I
 
 \ssecl{\texttt{\textbf{use}}}
 
+\ssecl{\texttt{\textbf{err on}}}
+\ssecl{\texttt{\textbf{warn about}}}
 \secl{The Not-So-Complicated Compilation}
 \ssecl{Idea}
 
